# fast_stripe_demo

./: .gitignore  .plash  README.md  dev  dh  main.py  main2.py  pyproject.toml  requirements.txt  ruff.toml  tutorial.md
