[project]
name = "fast-stripe-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faststripe>=2025.11.17.4",
    "python-dotenv>=1.2.1",
    "python-fasthtml>=0.12.36",
    "resend>=2.19.0",
    "stripe>=14.1.0",
]

[dependency-groups]
dev = [
    "ipython>=9.8.0",
    "ruff>=0.14.10",
]
